# Lumi-Diff

./: .gitignore  .lumidiff.toml  .lumignore  LICENSE  README.md  lumidiff-plan.md  pyproject.toml  requirements.txt  web-plan.md
lumidiff/: __main__.py  cli.py  diff_source.py  llm_client.py  reporter.py  rule_engine.py
web/: app.py
web/templates/: index.html
